[tool.poetry]
name = "webex-token-keeper"
version = "0.1.0"
description = "Store dynamic Webex OAuth tokens and make them accessible via a static key."
authors = ["Chris Lunsford <chris@cmlccie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mangum = {version = "^0.14.1", extras = ["full"]}
fastapi = "^0.75.1"
Jinja2 = "^3.1.1"
boto3 = "^1.21.39"
webexteamssdk = "^1.6"

[tool.poetry.dev-dependencies]
aws-sam-cli = "^1.46.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
